[package]
name = "ragdoll"
version = "0.1.0"
authors = ["solarsail"]

[dependencies]
log = "0.3"
env_logger = "0.3"
find_folder = "*"
hexgrid = { path = "hexgrid" }

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies.log-panics]
version = "1.1"
default-features = false
features = ["with-backtrace"]

[workspace]
