[package]
name = "ragdoll"
version = "0.1.0"
authors = ["solarsail"]

[dependencies]
log = "0.3"
log4rs = "0.6"
find_folder = "*"
nalgebra = "0.11"
hexgrid = { path = "hexgrid" }

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies.log-panics]
version = "1.1"
default-features = false
features = ["with-backtrace"]

[workspace]
