[package]
name = "ragdoll"
version = "0.1.0"
authors = ["solarsail"]

[dependencies]
log = "0.3"
log4rs = "0.6"
find_folder = "*"
nalgebra = "0.11"
specs = "0.8"
num_cpus = "1.4"
threadpool = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
rectgrid = { path = "rectgrid" }

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["ttf","image","gfx","mixer"]

[dependencies.log-panics]
version = "1.1"
default-features = false
features = ["with-backtrace"]

[workspace]
